tasky-ingress.yaml
# ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasky
  namespace: traefik
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /tasky
            pathType: Prefix
            backend:
              service:
                name: tasky
                port:
                  number: 8080
